<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search_filter"
          android:icon="@drawable/ic_action_search"
          android:title="@string/search_edit_box"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_record"
          android:icon="@drawable/ic_action_microphone"
          android:title="@string/button_start_record_activity"
          android:showAsAction="always" />

    <item android:id="@+id/action_about"
          android:title="@string/menu_about"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_show_all_audio"
          android:title="@string/menu_show_all_audio"
          android:showAsAction="ifRoom" />

</menu>
