<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2007, Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <AbsoluteLayout
       android:layout_width="wrap_content" 
       android:layout_height="0px"
       android:layout_weight="1">

      <ImageView android:id="@+id/bkgnd"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:scaleType="centerCrop"
       android:src="@drawable/bkgnd" />

      <com.ringdroid.WaveformView android:id="@+id/waveform"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent" />

      <com.ringdroid.MarkerView android:id="@+id/startmarker"
        android:nextFocusDown="@+id/endmarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/marker_left"
        android:contentDescription="@string/start_marker" />

      <com.ringdroid.MarkerView android:id="@+id/endmarker"
        android:nextFocusUp="@+id/startmarker"
        android:nextFocusDown="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/marker_right"
        android:contentDescription="@string/end_marker" />

    </AbsoluteLayout>

    <TextView android:id="@+id/info"
       android:nextFocusUp="@+id/endmarker"
       android:nextFocusDown="@+id/play"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       style="@style/AudioFileInfoOverlayText"
       android:gravity="center" />

    <LinearLayout
     style="@style/ToolbarBackground"
     android:layout_width="fill_parent" 
     android:layout_height="62dip"
     android:gravity="center" >

      <ImageButton android:id="@+id/rew"
       android:layout_width="64dip"
       android:layout_height="52dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/rewind"
       android:src="@android:drawable/ic_media_previous" />

      <ImageButton android:id="@+id/play"
       android:layout_width="71dip"
       android:layout_height="52dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/play"
       android:src="@android:drawable/ic_media_play" />

      <ImageButton android:id="@+id/ffwd"
       android:layout_width="64dip"
       android:layout_height="52dip"
       android:layout_marginRight="5dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/ffwd"
       android:src="@android:drawable/ic_media_next" />

      <LinearLayout style="@style/VerticalDividerLeft" />
      <LinearLayout style="@style/VerticalDividerRight" />

      <ImageButton android:id="@+id/zoom_in"
       android:layout_width="52dip"
       android:layout_height="52dip"
       android:layout_marginLeft="5dip"
       android:layout_marginTop="9dip"
       android:layout_marginBottom="8dip"
       android:contentDescription="@string/zoom_in"
       android:src="@drawable/button_zoom_in" />

      <ImageButton android:id="@+id/zoom_out"
       android:layout_width="52dip"
       android:layout_height="52dip"
       android:layout_marginTop="9dip"
       android:layout_marginBottom="8dip"
       android:contentDescription="@string/zoom_out"
       android:src="@drawable/button_zoom_out" />

    </LinearLayout>

    <LinearLayout style="@style/HorizontalDividerTop" />
    <LinearLayout style="@style/HorizontalDividerBottom" />

    <LinearLayout
     style="@style/ToolbarBackground"
     android:layout_width="fill_parent" 
     android:layout_height="62dip"
     android:gravity="center_vertical" >

      <LinearLayout
         android:layout_width="wrap_content" 
         android:layout_height="fill_parent"
         android:layout_marginTop="6dip"
         android:layout_marginLeft="5dip"
         android:layout_marginRight="5dip"
         android:gravity="center"
         android:orientation="vertical">

        <TextView
           android:id="@+id/mark_start"
           android:text="@string/start_label"
           android:textColor="#ffffffff"
           android:textSize="12sp"
           android:textStyle="bold"
           android:clickable="true"
           android:layout_width="wrap_content" 
           android:layout_height="31dip" />

        <TextView
           android:id="@+id/mark_end"
           android:text="@string/end_label"
           android:textColor="#ffffffff"
           android:textSize="12sp"
           android:textStyle="bold"
           android:clickable="true"
           android:layout_width="wrap_content" 
           android:layout_height="31dip" />

      </LinearLayout>

      <LinearLayout
         android:layout_width="wrap_content" 
         android:layout_height="fill_parent"
	 android:layout_marginRight="5dip"
         android:gravity="center"
         android:orientation="vertical">

        <EditText android:id="@+id/starttext"
           android:textSize="11sp"
	   android:layout_marginTop="5dip"
           android:layout_width="70dip"
           android:layout_height="31dip"
           android:contentDescription="@string/start_label" />

        <EditText android:id="@+id/endtext"
           android:textSize="11sp"
           android:layout_width="70dip"
           android:layout_height="31dip"
           android:contentDescription="@string/end_label" />

      </LinearLayout>

      <LinearLayout style="@style/VerticalDividerLeft" />
      <LinearLayout style="@style/VerticalDividerRight" />

      <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_marginLeft="5dip"
         android:layout_marginRight="5dip"
         android:gravity="center">

        <ImageButton android:id="@+id/save"
         android:layout_width="52dip"
         android:layout_height="52dip"
         android:layout_marginTop="5dip"
         android:src="@drawable/menu_save"
         android:contentDescription="@string/save_button" />

      </LinearLayout>

      <LinearLayout style="@style/VerticalDividerLeft" />
      <LinearLayout style="@style/VerticalDividerRight" />

   </LinearLayout>

</LinearLayout>
