<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2007, Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dip"
    android:layout_marginRight="10dip"
    android:orientation="vertical">

    <TextView
       android:text="@string/ringtone_type_label"
       android:textColor="#ffffffff"
       android:textSize="12sp"
       android:layout_marginLeft="15dip"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" />

    <Spinner android:id="@+id/ringtone_type"
       android:layout_marginLeft="10dip"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

    <TextView
       android:text="@string/ringtone_name_label"
       android:textColor="#ffffffff"
       android:textSize="12sp"
       android:labelFor="@+id/filename"
       android:layout_marginLeft="15dip"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" />

    <EditText android:id="@+id/filename"
       android:inputType="text"
       android:layout_marginLeft="10dip"
       android:layout_width="280sp" 
       android:layout_height="wrap_content" />

    <LinearLayout
       android:layout_marginTop="5dip"
       android:layout_marginLeft="10dip"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:gravity="center_horizontal">

      <Button android:id="@+id/save"
         android:text="@string/file_save_button_save"
         android:layout_width="100sp" 
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dip" />

      <Button android:id="@+id/cancel"
         android:text="@string/file_save_button_cancel"
         android:layout_width="100sp" 
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dip" />

    </LinearLayout>

</LinearLayout>
